@@ -129,14 +129,18 @@ public class SizeSequence
   }
 
   /**
-   * Returns the size of the specified element.
+   * Returns the size of the specified element, or 0 if the element index is
+   * outside the defined range.
    * 
    * @param index  the element index.
    * 
-   * @return The size of the specified element.
+   * @return The size of the specified element, or 0 if the element index is
+   *     outside the defined range.
    */
   public int getSize(int index)
   {
+    if (index < 0 || index >= sizes.length)
+      return 0;
     return sizes[index];
   }
 
